--- a/app/src/main/res/layout/activity_cakes1.xml
+++ b/app/src/main/res/layout/activity_cakes1.xml
@@ -9,7 +9,7 @@
     tools:context=".cakes1">
 
     <ImageView
-        android:id="@+id/lightbg"
+        android:id="@+id/lightbg30"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/lightbackground"
